--- a/Synergism.css
+++ b/Synergism.css
@@ -7,15 +7,20 @@ html {
 
 
 }
-body {background-color: black ;
+body {background-color: #111111 ;
 	transform: scale(0.8);
 	transform-origin: 0 0;
-	overflow-x: hidden;}
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
 
 body {
 	color: black;
 	margin: 0;
 	box-sizing: border-box;
+}
+btn {
+	color: #171717
 }
 a {
 	color: white;
@@ -52,18 +57,18 @@ input[type="range"] {
 
 button {
 	color: white;
-	background-color: black;
+	background-color: #171717;
     outline: none;
     cursor: pointer;
 }
 
 button:active {
-    background-color: black;
+    background-color: #171717;
     cursor: pointer;
 }
 
 button:focus {
-    border-color: black;
+    border-color: #171717;
     cursor: pointer;
 }
 
@@ -78,7 +83,10 @@ a {color: white;}
 	width: 50%;
 	z-index: 1
 }
-
+#preload {
+	position:absolute;
+	z-index: 2
+}
 #resourcestable {
 	position: absolute;
 	top: 20px;
@@ -538,7 +546,7 @@ position: absolute;
 	width: 1200px;
 	margin-left: -600px;
 	height: 20px;
-	color: gray;
+	color: lightgray;
 	text-align: center;
 }
 #buildingsTable {
@@ -561,54 +569,108 @@ position: absolute;
 position:absolute;
 display: inline-block;
 text-align:center;
-top: 197px;
+top: 207px;
 left: 10%;
 margin-left: -12.5px
+}
+#cointext {
+position:absolute;
+display: inline-block;
+text-align:center;
+top: 247px;
+width: 150px;
+left: 10%;
+margin-left: -72.5px
 }
 
 #prestigeupgradetitle{
 position:absolute;
 display: inline-block;
 text-align:center;
-top: 197px;
+top: 207px;
 left: 25%;
 margin-left: -12.5px
 }
+#prestigetext {
+	position:absolute;
+	display: inline-block;
+	text-align:center;
+	top: 247px;
+	width: 150px;
+	left: 25%;
+	margin-left: -72.5px
+	}
 #transcendupgradetitle{
 position:absolute;
 display: inline-block;
 text-align:center;
-top: 197px;
+top: 207px;
 left: 40%;
 margin-left: -12.5px
 }
+#transcendtext {
+	position:absolute;
+	display: inline-block;
+	text-align:center;
+	top: 247px;
+	width: 150px;
+	left: 40%;
+	margin-left: -72.5px
+	}
 
 
 #reincarnationupgradetitle{
 position:absolute;
 display: inline-block;
 text-align:center;
-top: 197px;
+top: 207px;
 left: 85%;
 margin-left: -14.5px
 }
+#reincarnationtext {
+	position:absolute;
+	display: inline-block;
+	text-align:center;
+	top: 247px;
+	width: 150px;
+	left: 85%;
+	margin-left: -72.5px
+	}
 #automationtitle {
 	position:absolute;
 display: inline-block;
 text-align:center;
-top: 197px;
+top: 207px;
 left: 70%;
 margin-left: -13.5px
 }
+#automationtext {
+	position:absolute;
+	display: inline-block;
+	text-align:center;
+	top: 247px;
+	width: 150px;
+	left: 70%;
+	margin-left: -72.5px
+	}
 
 #generatortitle {
 	position:absolute;
 display: inline-block;
 text-align:center;
-top: 197px;
+top: 207px;
 left: 55%;
 margin-left: -13px
 }
+#generatortext {
+	position:absolute;
+	display: inline-block;
+	text-align:center;
+	top: 247px;
+	width: 150px;
+	left: 55%;
+	margin-left: -72.5px
+	}
 
 #upgradesrow2 {
 	position:relative;
@@ -618,35 +680,35 @@ margin-left: -13px
 
 #coinupgradestable {
 	position: absolute;
-	top: 110px;
+	top: 150px;
 	left: 10%;
 	margin-left: -88px;
 }
 
 #prestigeupgradestable {
 	position: absolute;
-	top: 110px;
+	top: 150px;
 	left: 25%;
 	margin-left: -88px;
 }
 
 #transcendupgradestable {
 	position: absolute;
-	top: 110px;
+	top: 150px;
 	left: 40%;
 	margin-left: -88px;
 }
 
 #reincarnationupgradestable {
 	position: absolute;
-	top: 110px;
+	top: 150px;
 	left: 85%;
 	margin-left: -88px;
 }
 
 #automationtable {
 	position:absolute;
-	top: 110px;
+	top: 150px;
 	left: 70%;
 	margin-left: -88px;
 	
@@ -654,14 +716,14 @@ margin-left: -13px
 
 #generatortable {
 	position: absolute;
-	top: 110px;
+	top: 150px;
 	left: 55%;
 	margin-left: -88px;
 }
 
 #shoptogglerow {
 	position:relative;
-	top: 345px;
+	top: 385px;
 }
 
 #shoptogglecoin {
@@ -706,7 +768,7 @@ margin-left: -13px
 
 #upgradesrow3 {
 	position: relative;
-	top: 180px;
+	top: 220px;
 	text-align: center;
 }
 
@@ -715,7 +777,7 @@ margin-left: -13px
 	text-align: center;
 	top: 215px;
 	width: 1000px;
-	left: 50%;
+	left: 48%;
 	margin-left: -500px;
 }
 
@@ -723,7 +785,7 @@ margin-left: -13px
 	position: absolute;
 	top: 235px;
 	width: 300px;
-	left: 50%;
+	left: 48%;
 	margin-left: -150px;
 }
 
@@ -731,7 +793,7 @@ margin-left: -13px
 	position: absolute;
 	top: 255px;
 	width: 400px;
-	left: 50%;
+	left: 48%;
 	margin-left: -200px;
 	color: pink
 }
@@ -749,30 +811,101 @@ margin-left: -13px
 	position: absolute;
 	top: 0px;
 	width: 500px;
-	left: 50%;
+	left: 25%;
 	margin-left: -250px;
+}
+#settingtitle3 {
+	position: absolute;
+	top: 0px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#confirmationdisclaimer {
+	position: absolute;
+	top: 120px;
+	width: 300px;
+	left: 25%;
+	margin-left: -150px;
 }
 
 
 #settingpic1 {
 	position: absolute;
 	top: 60px;
-	left: 45%;
+	left: 20%;
 	margin-left: -18px;
 }
 
 #settingpic2 {
 	position: absolute;
 	top: 60px;
-	left: 50%;
+	left: 25%;
 	margin-left: -18px;
 }
 
 #settingpic3 {
 	position: absolute;
 	top: 60px;
-	left: 55%;
+	left: 30%;
 	margin-left: -18px;
+}
+
+#temporarystats1 {
+	position: absolute;
+	top: 30px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#temporarystats2 {
+	position: absolute;
+	top: 70px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#temporarystats3 {
+	position: absolute;
+	top: 110px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#temporarystats4 {
+	position: absolute;
+	top: 50px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#temporarystats5 {
+	position: absolute;
+	top: 90px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#temporarystats6 {
+	position: absolute;
+	top: 130px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#temporarystats7 {
+	position: absolute;
+	top: 150px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
+}
+#temporarystats8 {
+	position: absolute;
+	top: 170px;
+	width: 500px;
+	left: 75%;
+	margin-left: -250px;
 }
 
 #toggle1 {
@@ -860,8 +993,8 @@ margin-left: -13px
 	height: 30px;
 	width: 130px;
 	top: 320px;
-	left: 50%;
-	margin-left: -55px;
+	left: 48%;
+	margin-left: -65px;
 }
 
 #toggle10 {
@@ -919,6 +1052,13 @@ margin-left: -13px
 	left: 50%;
 	margin-left: -75px;
 }
+#prestigeautotoggle {
+	position:absolute;
+	width: 150px;
+	top: 394px;
+	left: 50%;
+	margin-left: -75px;
+}
 
 #toggle16 {
 	position:absolute;
@@ -968,7 +1108,7 @@ margin-left: -13px
 	width: 40px;
 	height: 40px;
 	top: 95px;
-	left: 43.45%;
+	left: 18.45%;
 
 }
 #toggle29 {
@@ -976,14 +1116,14 @@ margin-left: -13px
 	width: 40px;
 	height: 40px;
 	top: 95px;
-	left: 48.45%
+	left: 23.45%
 }
 #toggle30 {
 	position: absolute;
 	width: 40px;
 	height: 40px;
 	top: 95px;
-	left: 53.45%
+	left: 28.45%
 }
 
 #exportgame {
@@ -1038,11 +1178,11 @@ margin-left: -13px
 }
 #versionnumber{
 	position: absolute;
-	width: 600px;
+	width: 900px;
 	height: 100px;
 	top: 450px;
 	left: 50%;
-	margin-left: -300px;
+	margin-left: -450px;
 }
 
 #statistics {
@@ -1060,29 +1200,27 @@ margin-left: -13px
 	border: 1px solid white
 	
 }
+#achievementprogress {
+	position: absolute;
+	top: 20px;
+	left: 46.75%;
+	width: 300px;
+	margin-left: -150px;
+}
 #achievementstable {
 	position: absolute;
 	top: 55px;
-	margin-left: -80px;
-	left: 25%;
+	margin-left: -420px;
+	left: 50%;
 }
 
 #achievementinfo {
 	position: fixed;
-	top: 300px;
+	top: 470px;
 	width: 500px;
-	left: 70%;
+	left: 47.8%;
 	margin-left: -250px;
 	border: 1px solid plum
-}
-
-#achievementpoints {
-	position: absolute;
-	top: -40px;
-	width: 500px;
-	left: 50%;
-	margin-left: -250px;
-	color: green
 }
 
 #achievementtutorial {
@@ -1097,7 +1235,7 @@ margin-left: -13px
 #achievementdescription {
 	position: absolute;
 	top: 15px;
-	width: 500px;
+	width: 900px;
 	color: white;
 	text-align: left;
 	left: 10px;
@@ -1106,8 +1244,8 @@ margin-left: -13px
 #achievementreward {
 	position: absolute;
 	top: 55px;
-	width: 500px;
-	color: green;
+	width: 900px;
+	color: limegreen;
 	text-align: left;
 	left: 10px;
 }
@@ -1115,19 +1253,19 @@ margin-left: -13px
 #achievementcolorcode1 {
 	position: absolute;
 	padding: 5px;
-	top: 350px;
-	left: 70%;
+	top: 437px;
+	left: 48%;
 	width: 600px;
 	margin-left: -300px;
 	height: 20px;
-	color: green;
+	color: limegreen;
 	text-align: center;
 }
 #achievementcolorcode2 {
 	position: absolute;
 	padding: 5px;
-	top: 370px;
-	left: 70%;
+	top: 457px;
+	left: 48%;
 	width: 600px;
 	margin-left: -300px;
 	height: 20px;
@@ -1137,8 +1275,8 @@ margin-left: -13px
 #achievementcolorcode3 {
 	position: absolute;
 	padding: 5px;
-	top: 390px;
-	left: 70%;
+	top: 477px;
+	left: 48%;
 	width: 600px;
 	margin-left: -300px;
 	height: 20px;
@@ -1148,8 +1286,8 @@ margin-left: -13px
 #achievementcolorcode4 {
 	position: absolute;
 	padding: 5px;
-	top: 410px;
-	left: 70%;
+	top: 497px;
+	left: 48%;
 	width: 600px;
 	margin-left: -300px;
 	height: 20px;
@@ -1437,7 +1575,7 @@ margin-left: -13px
 
 #prestigeamount {
 	position: absolute;
-	top: 400px;
+	top: 418px;
 	padding: 0px;
 	left: 50%;
 	width: 100px;
@@ -1521,8 +1659,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 178px;
 	left: 27.5%;
-	width: 110px;
-	margin-left: -55px;
+	width: 200px;
+	margin-left: -100px;
 	color: plum;
 	text-align: center;
 }
@@ -1531,8 +1669,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 178px;
 	left: 42.5%;
-	width: 110px;
-	margin-left: -55px;
+	width: 200px;
+	margin-left: -100px;
 	color: plum;
 	text-align: center;
 }
@@ -1541,8 +1679,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 178px;
 	left: 57.5%;
-	width: 110px;
-	margin-left: -55px;
+	width: 200px;
+	margin-left: -100px;
 	color: plum;
 	text-align: center;
 }
@@ -1551,8 +1689,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 178px;
 	left: 72.5%;
-	width: 110px;
-	margin-left: -55px;
+	width: 200px;
+	margin-left: -100px;
 	color: plum;
 	text-align: center;
 }
@@ -1561,8 +1699,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 197px;
 	left: 27.5%;
-	width: 130px;
-	margin-left: -65px;
+	width: 200px;
+	margin-left: -100px;
 	color: white;
 	text-align: center;
 }
@@ -1571,8 +1709,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 197px;
 	left: 42.5%;
-	width: 130px;
-	margin-left: -65px;
+	width: 200px;
+	margin-left: -100px;
 	color: white;
 	text-align: center;
 }
@@ -1581,8 +1719,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 197px;
 	left: 57.5%;
-	width: 130px;
-	margin-left: -65px;
+	width: 200px;
+	margin-left: -100px;
 	color: white;
 	text-align: center;
 }
@@ -1591,8 +1729,8 @@ margin-left: -13px
 	padding: 0px;
 	top: 197px;
 	left: 72.5%;
-	width: 130px;
-	margin-left: -65px;
+	width: 200px;
+	margin-left: -100px;
 	color: white;
 	text-align: center;
 }
@@ -1965,7 +2103,7 @@ margin-left: -13px
 
 #transcendamount {
 	position: absolute;
-	top: 400px;
+	top: 418px;
 	padding: 0px;
 	left: 50%;
 	width: 100px;
@@ -1990,6 +2128,13 @@ margin-left: -13px
 	position:absolute;
 	width: 150px;
 	top: 374px;
+	left: 50%;
+	margin-left: -75px;
+}
+#transcendautotoggle {
+	position:absolute;
+	width: 150px;
+	top: 394px;
 	left: 50%;
 	margin-left: -75px;
 }
@@ -2153,7 +2298,7 @@ margin-left: -13px
 
 #challengereward {
 	position: absolute;
-	top: 110px;
+	top: 130px;
 	width: 500px;
 	color: pink;
 	text-align: left;
@@ -2206,7 +2351,7 @@ margin-left: -13px
     padding: 0px;
     top: 20px;
     width: 1000px;
-    left: 42%;
+    left: 38%;
     margin-left: -500px;
 }
  
@@ -2368,6 +2513,13 @@ margin-left: -13px
 	left: 50%;
 	margin-left: -75px;
 }
+#reincarnateautotoggle {
+	position:absolute;
+	width: 150px;
+	top: 394px;
+	left: 50%;
+	margin-left: -75px;
+}
 
 #autoreincarnate {
 	position: absolute;
@@ -2382,7 +2534,7 @@ margin-left: -13px
 
 #reincarnationamount {
 	position: absolute;
-	top: 400px;
+	top: 418px;
 	padding: 0px;
 	left: 50%;
 	width: 100px;
@@ -2475,4 +2627,39 @@ margin-left: -13px
 	height: 20px;
 	color: plum;
 	text-align: center;
+}
+#automaticobtainium{
+	position: absolute;
+	padding: 5px;
+	top: 370px;
+	left: 50%;
+	width: 1200px;
+	margin-left: -600px;
+	height: 20px;
+	text-align: center;
+}
+#contentteaser1 {
+	position: absolute;
+	padding: 5px;
+	top: 410px;
+	left: 50%;
+	width: 1200px;
+	margin-left: -600px;
+	height: 20px;
+	text-align: center;
+}
+
+#retrychallengesetting {
+	position: absolute;
+	top: 0px;
+	width: 500px;
+	left: 50%;
+	margin-left: -250px;
+}
+#retrybutton {
+	position: absolute;
+	width: 70px;
+	top: 60px;
+	left: 50%;
+	margin-left: -35px;
 }
